public class Axis
{
  public const string HORIZONTAL = "Horizontal";
  public const string VERTICAL = "Vertical";
  public const string MOUSE_X = "Mouse X";
  public const string MOUSE_Y = "Mouse Y";
}

public class AnimationAction
{
  public const string ZOOM_IN_ANIM = "ZoomIn";
  public const string ZOOM_OUT_ANIM = "ZoomOut";

  public const string SHOOT_TRIGGER = "Shoot";
  public const string AIM_PARAMETER = "Aim";

  public const string WALK_PARAMETER = "Walk";
  public const string HIT_NORMAL_PARAMETER = "HitNormal";
  public const string HIT_HARD_PARAMETER = "HitHard";
  public const string RUN_PARAMETER = "Run";
  public const string ATTACK_TRIGGER = "Attack";
  public const string DEAD_TRIGGER = "Dead";
}

public class Tags
{
  public const string LOOK_ROOT = "Look Root";
  public const string ZOOM_CAMERA = "FP Camera";
  public const string CROSSHAIR = "Crosshair";

  public const string ARROW_TAG = "Arrow";
  public const string AXE_TAG = "Axe";

  public const string PLAYER_TAG = "Player";
  public const string ENEMY_TAG = "Enemy";

}

